# gst-interpipe

./: .gitignore  AUTHORS  COPYING  GstInterPipeIListener.html  GstInterPipeINode.html  GstInterPipeSink.html  GstInterPipeSrc.html  MAINTAINERS  Makefile.am  NEWS  README.md  api-index-full.html  autogen.sh  ch01.html  ch02.html  configure.ac  deprecated-api-index.html  gst-interpipe-1.0.devhelp2  gst-interpipe-GstInterPipe.html  gst-interpipe.doap  gst-interpipe.spec.in  index.html  index.sgml  meson.build  meson_options.txt  object-tree.html
debian/: changelog  control  copyright  rules
docs/: Makefile.am  meson.build  version.entities.in
docs/plugins/: Makefile.am  gst-interpipe-docs.xml  gst-interpipe-docs.xml.in  gst-interpipe-sections.txt  meson.build
example/python_example/: README.md  test_pipeline.py  test_utils.py
gst/: Makefile.am  meson.build
gst/interpipe/: Makefile.am  gstinterpipe.c  gstinterpipe.h  gstinterpipeilistener.c  gstinterpipeilistener.h  gstinterpipeinode.c  gstinterpipeinode.h  gstinterpipesink.c  gstinterpipesink.h  gstinterpipesrc.c  gstinterpipesrc.h  gstplugin.c  meson.build
m4/: gst-interpipe-check.m4
tests/: meson.build
tests/check/: Makefile.am  meson.build
tests/check/gst/: test_allow_renegotiation_property.c  test_anonymous_connection.c  test_block_switch.c  test_buffer_properties.c  test_caps_renegotiation.c  test_enable_sync.c  test_get_caps.c  test_hot_plug.c  test_in_bounds_events.c  test_interpipe_synchronization.c  test_invalid_caps.c  test_node_name_removed.c  test_out_of_bounds_events.c  test_out_of_bounds_upstream_events.c  test_reconfigure_event.c  test_set_caps.c  test_stream_sync.c  test_synchronization_switch.c
