# Feature options
option('tests', type : 'feature', value : 'auto', yield : true, description : 'Enable tests')
option('enable-gtk-doc', type : 'boolean', value : true, description : 'Use gtk-doc to build documentation')

# Common options
option('package-name', type : 'string', yield : true,
       description : 'Package name to use in plugins')
option('package-origin', type : 'string', value : 'Unknown package origin', yield : true,
       description : 'Package origin URL to use in plugins')
